# langtools-mcp

./: GOPLS_CONFIGURATION.md  MULTIPLE_DIAGNOSTICS_SOLUTION.md  README.md  TEST_CONSOLIDATION_SUMMARY.md  justfile  pyproject.toml
src/langtools_mcp/: __init__.py  __main__.py  server.py
src/langtools_mcp/langtools/: __init__.py  analysis.py  go_analyzer.py  langtools_daemon_client.py  parsers.py  ruff_analyzer.py  settings.py  strategies.py  tool_runner.py  utils.py
src/langtools_mcp/langtools_daemon/: gopls_lsp_adapter.py  gopls_runner.py  lsp_adapter.py  lsp_pool.py  main.py  ruff_runner.py
src/langtools_mcp/lsp/: lsp_daemon_client.py
src/langtools_mcp/lsp_daemon/: main.py
src/lsp_mcp/: __init__.py  __main__.py  server.py
src/lsp_mcp/lsp/: analysis.py  pyright_analyzer.py  ruff_analyzer.py
src/lsp_mcp/lsp_daemon/: main.py  ruff_runner.py
tests/: test_analysis.py  test_lsp_adapter.py  test_lsp_daemon.py  test_lsp_pool.py  test_pyright_analyzer.py  test_ruff_analyzer.py
