[project]
name = "lsp-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Josh Floth", email = "flothjldev@proton.me" }]
requires-python = ">=3.13"
dependencies = ["mcp[cli]>=1.8.1"]

[project.scripts]
lsp-mcp = "lsp_mcp:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
