[project]
name = "lsp-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Josh Floth", email = "flothjldev@proton.me" }]
requires-python = ">=3.13"
dependencies = ["mcp[cli]>=1.8.1"]

[project.optional-dependencies]
test = ["pytest>=8.4.1"]

[project.scripts]
lsp-mcp = "lsp_mcp:main"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
