[project]
name = "langtools-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Josh Floth", email = "flothjldev@proton.me" }]
requires-python = ">=3.13"
dependencies = [
    "mcp[cli]>=1.8.1",
    "pydantic-settings>=2.10.1",
    "ruff>=0.12.1",
]

[project.optional-dependencies]
test = ["pytest>=8.4.1"]

[project.scripts]
langtools-mcp = "langtools_mcp:main"

[tool.pytest.ini_options]
python_files = ["test_*.py", "*_test.py"]
testpaths = ["tests"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.4.1",
]
